<resources>
    <string name="app_name">Projet_Android</string>
    <string name="toast_remove_favoris">Film retiré des favoris</string>
    <string name="toast_add_favoris">Film ajouté aux favoris</string>
    <string name="Unknowned_date">Date continue</string>
    <string name="Incription_error_pseudo">Le pseudo que vous avez saisit correspond déjà à celui d\'un autre utilisateur, veuillez changer votre pseudo</string>
    <string name="Inscription_error_empty">Il y a au moins un champ non renseigné, veuillez compléter les champs vides.</string>
    <string name="Toast_scanner_error">Identifiant du film non reconnu</string>
    <string name="scan">Scannez un QR Code</string>
    <string name="toast_scanner_permission">Permission refusée</string>
    <string name="toast_account_update">Vos informations on été mises à jour</string>
    <string name="search_no_movies">Aucun film trouvé</string>
    <string name="search_1_movie">1 film trouvé</string>
    <string name="comment_hint">Ecrivez un commentaire</string>
    <string name="ajouter_un_commentaire">Ajouter un commentaire</string>
    <string name="mes_informations">Mes informations</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="pseudo">Pseudo</string>
    <string name="mettre_jour_les_informations">Mettre à jour les informations</string>
    <string name="mes_favoris">Mes favoris</string>
    <string name="cr_er_mon_compte">Créer mon compte</string>
    <string name="nom_hint">Nom</string>
    <string name="pr_nom_hint">Prénom</string>
    <string name="pseudo_hint">Pseudo</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="cr_er_mon_compte_button">Créer mon compte</string>
    <string name="error_text">Erreur, veuillez retaper vos identifiants ou vous inscrire.</string>
    <string name="r_sum">Résumé</string>
    <string name="informations">Informations</string>
    <string name="budget">Budget</string>
    <string name="recette">Recette</string>
    <string name="langue_de_la_vo">Langue de la VO</string>
    <string name="genre">Genre</string>
    <string name="casting">Casting</string>
    <string name="bande_annonce">Bande Annonce</string>
    <string name="recommandations">Recommandations</string>
    <string name="les_plus_populaires">Les plus populaires</string>
    <string name="les_mieux_not_s">Les mieux notés</string>
    <string name="les_derniers_films_fran_ais">Les derniers films français</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="pseudo_connexion">Pseudo</string>
    <string name="mot_de_passe_connexion">Mot de passe</string>
    <string name="inscription_connexion">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="connesion_error">Erreur, veuillez retaper vos identifiants ou vous inscrire.</string>
    <string name="rechercher">Rechercher</string>
    <string name="trier_les_r_sultats_par">Trier les résultats par</string>
    <string name="commentaire">Commentaire</string>
    <string name="filtres">Filtres</string>
    <string name="ann_es">Années</string>
    <string name="conserver_les_films_allant_de">Conserver les films allant de</string>
    <string name="_1990">1990</string>
    <string name="a">à</string>
    <string name="_2023">2023</string>
    <string name="notes">Notes</string>
    <string name="conserver_les_films_allant_de_notes">Conserver les films allant de</string>
    <string name="_0_0">0.0</string>
    <string name="_10">10</string>
    <string name="commentaires">Commentaires</string>
    <string name="synchonize">Synchonize</string>
    <string name="compte">Compte</string>
    <string name="favorites">Favorites</string>
    <string name="rechercher_un_film">Rechercher un film</string>
    <string name="scanner_un_qrcode">Scanner un QRCode</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string-array name="levels">
        <item>Popularité</item>
        <item>Date</item>
        <item>Note</item>
    </string-array>

    <string-array name="rangeSlider">
        <item>0</item>
        <item>10</item>
    </string-array>
</resources>