<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/m"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".MenuAccueilActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:text="@string/bienvenue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/pseudo_accueil_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pseudo_connexion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/mot_passe_menu_activitty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/mot_de_passe_connexion"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/inscription_menu_accueil_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/inscription_connexion" />

        <Button
            android:id="@+id/connexion_menu_accueil_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/connexion" />

        <TextView
            android:id="@+id/erreur_menu_activitty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/connesion_error" />


    </LinearLayout>


</LinearLayout>